--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "ajax": "0.0.4",
     "bulma": "^0.7.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
