--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "jquery": "^3.3.1",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
