--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "jquery": "^3.3.1",
+    "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
