--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.3.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
+    "nodemon": "^1.18.7",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
