--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,25 @@
+ 
 {
   "development": {
-    "username": "root",
-    "password": "password",
-    "database": "exampledb",
-    "host": "localhost",
-    "dialect": "mysql"
+   "username": "root",
+   "password": "     ",
+   "database": "exampledb",
+   "host": "127.0.0.1",
+   "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "password",
-    "database": "testdb",
-    "host": "localhost",
-    "dialect": "mysql",
-    "logging": false
+   "username": "root",
+   "password": null,
+   "database": "database_test",
+   "host": "127.0.0.1",
+   "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
-    "dialect": "mysql"
+   "username": "root",
+   "password": null,
+   "database": "database_production",
+   "host": "127.0.0.1",
+   "dialect": "mysql"
   }
-}
+ }
+
