--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "ajax": "0.0.4",
+    "bcrypt-nodejs": "0.0.3",
     "bulma": "^0.7.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
     "nodemon": "^1.18.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
