--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
 {
   "development": {
    "username": "root",
-   "password": "     ",
+   "password": "Fernja46",
    "database": "exampledb",
    "host": "127.0.0.1",
    "dialect": "mysql"
@@ -15,11 +15,8 @@
    "dialect": "mysql"
   },
   "production": {
-   "username": "root",
-   "password": null,
-   "database": "database_production",
-   "host": "127.0.0.1",
-   "dialect": "mysql"
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
   }
  }
 
